# NichtHaskell4.0

./: .gitignore  SeminarBeispiel.tex  generate_and_test.py  literatur.bib  notes.md  test_data.proto  test_data_pb2.py  vorgehen.md  vorschlag_vorgehen_mrab.md
documentation/: SeminarBeispiel.aux  SeminarBeispiel.fdb_latexmk  SeminarBeispiel.fls  SeminarBeispiel.out  SeminarBeispiel.tex  seminarvorlage.cls
documentation/output/: SeminarBeispiel.aux  SeminarBeispiel.fdb_latexmk  SeminarBeispiel.fls  SeminarBeispiel.out
serialize_rust/: Cargo.toml  output.xml
serialize_rust/src/: data.rs  data_protobuf.rs  datagen.rs  lib.rs  main.rs  serializer.rs
serialize_rust/src/serializers/: json.rs  messagepack.rs  mod.rs  protobuf.rs  xml.rs
test_scripts/python/: datasets.proto  datasets_pb2.py  evaluator.py  visualizer.py  visualizer_log.py  visualizer_pro.py
