[package]
name = "serialize_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
prost = "0.13.3"
prost-build = "0.13.3"
protobuf = "3.7.1"
rand = "0.8.5"
rmp-serde = "1.3.0"
serde = { version = "1.0.215", features = ["derive"] }
serde-protobuf = "0.8.2"
serde-xml-rs = "0.6.0"
serde_json = "1.0.132"
serde_xml = "0.9.1"
